# card-games

./: README.rst  pyproject.toml
card_games/: builders.py  buttons.py  card.py  deck.py  game.py  helpers.py  main.py  player.py  rules.py  table.py  utils.py
tests/: test_card_games.py
