[tool.poetry]
name = "card-games"
version = "0.1.0"
description = ""
authors = ["Steven Timberman <stim@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.2"
pygame = "2.0.0.dev6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.9.0"
pytest-xdist = "^1.32.0"

[tool.poetry.scripts]
play-game = "card_games.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

